[package]
authors = ["Tibor Prokai <pro@sch.bme.hu>"]
categories = ["embedded", "no-std"]
description = "A blue pill based board: door unit`"
keywords = ["arm", "cortex-m", "template"]
license = "MIT OR Apache-2.0"
name = "door-pill"
repository = "https://github.com/tib888/door-pill"
version = "0.1.0"
edition = "2018"

[dependencies]
cortex-m = "0.5.7"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.0"
typenum = "1.10.0"
embedded-hal = "0.2.1"
nb = "0.1.1"
panic-halt = "0.2.0"
heapless = "0.4.1"
owned-singleton = "0.1.0"

[dependencies.cortex-m-rtfm]
features = ["timer-queue"]
version="0.4.0"

[dependencies.stm32f103xx]
features = ["rt"]
version = "0.11.0"

[dependencies.stm32f103xx-hal]
git = "https://github.com/tib888/stm32f103xx-hal"
version = "0.1.0"

[dependencies.ir]
git = "https://github.com/tib888/ir"
# path = "../ir"
version = "0.2.0"

[dependencies.onewire]
git = "https://github.com/tib888/onewire"
version = "0.4.1"

# [dependencies.lcd-hal]
# git = "https://github.com/tib888/lcd-hal"
# version = "0.4.0"

[dependencies.room-pill]
path = "../room-pill"
version = "0.3.1"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations # turn this off to win flash space, but will break onewire timing, need readjust
#panic ='halt'
